bisonc++ (4.12.04) NOT YET TAGGED

  * 'build install' uses an optional -l argument: the (relative or
    absolute) path to the logfile to use. The environment variable BISONCPP is
    no longer used.


bisonc++ (4.12.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:17:56 +0200

bisonc++ (4.12.02)

  * Refined the 'build uninstall' procedure

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 04 Oct 2015 16:27:18 +0200

bisonc++ (4.12.01)

  * The implementation of the ./build script was improved.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Oct 2015 18:41:45 +0200

bisonc++ (4.12.00)

  * Added 'build uninstall'. This command only works if, when calling one of
    the 'build install' alternatives and when calling 'build uninstall' the
    environment variable BISONCPP contains the (preferably absolute) filename
    of a file on which installed files and directories are logged.
    Note that 'build (dist)clean' does not remove the file pointed at by the
    BISONCPP environment variable, unless that file happpens to be in a
    directory removed by 'build (dist)clean'. See also the file INSTALL.
    Defining the BISONCPP environment variable as ~/.bisoncpp usually works
    well. 

  * Guillaume  Endignoux offered several valuable suggestions:
    - Classes may not have default constructors, but may still be used if
      the default $$ = $1 action is not used. This can now be controlled using
      option --no-default-action-return (-N). When this option is specified
      the default $$ = $1 assignment of semantic values when returning from an