@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.12.00 on Fri, 25 Sep 2015 12:58:47 +0200
+// Generated by Bisonc++ V4.13.00 on Sun, 11 Oct 2015 12:23:04 +0200
 
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
@@ -179,11 +179,11 @@ namespace Meta__
         DataType d_data;
     
         public:
-                // The default constructor and constructors for 
-                // defined data types are available
-            Semantic();
-            Semantic(DataType const &data);
-            Semantic(DataType &&tmp);
+                // The constructor forwards arguments to d_data, allowing
+                // it to be initialized using whatever constructor is
+                // available for DataType
+            template <typename ...Params>
+            Semantic(Params &&...params);
 
             DataType &data();
             DataType const &data() const;
@@ -405,26 +405,12 @@ inline Tag__ Base::tag() const
 }
 
 template <Tag__ tg_>
-inline Semantic<tg_>::Semantic()
-:
-    Base(tg_),
-    d_data{}
-{}
-
-template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type const &data)
+template <typename ...Params>
+inline Semantic<tg_>::Semantic(Params &&...params)
 :
     Base(tg_),
     Base2(0),
-    d_data(data)
-{}
-
-template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(DataType &&tmp)
-:
-    Base(tg_),
-    Base2(0),
-    d_data(std::move(tmp))
+    d_data(std::forward<Params>(params) ...)
 {}
 
 template <Tag__ tg_>
@@ -499,10 +485,10 @@ inline typename TypeOf<tg_>::type const &SType::data() const
     return std::shared_ptr<Base>::get()->get<tg_>();
 }
 
-template <Tag__ tg_, typename ...Args>
-inline void SType::emplace(Args &&...args)
+template <Tag__ tg_, typename ...Params>
+inline void SType::emplace(Params &&...params)
 {
-    reset(new Semantic<tg_>(std::forward<Args>(args) ...));
+    reset(new Semantic<tg_>(std::forward<Params>(params) ...));
 }
 
 template <bool, typename Tp_>
