@@ -71,11 +71,11 @@ $insert polymorphicSpecializations
         DataType d_data;
     
         public:
-                // The default constructor and constructors for 
-                // defined data types are available
-            Semantic();
-            Semantic(DataType const &data);
-            Semantic(DataType &&tmp);
+                // The constructor forwards arguments to d_data, allowing
+                // it to be initialized using whatever constructor is
+                // available for DataType
+            template <typename ...Params>
+            Semantic(Params &&...params);
 
             DataType &data();
             DataType const &data() const;
