@@ -12,26 +12,12 @@ inline Tag__ Base::tag() const
 }
 
 template <Tag__ tg_>
-inline Semantic<tg_>::Semantic()
-:
-    Base(tg_),
-    d_data{}
-{}
-
-template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type const &data)
+template <typename ...Params>
+inline Semantic<tg_>::Semantic(Params &&...params)
 :
     Base(tg_),
     Base2(0),
-    d_data(data)
-{}
-
-template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(DataType &&tmp)
-:
-    Base(tg_),
-    Base2(0),
-    d_data(std::move(tmp))
+    d_data(std::forward<Params>(params) ...)
 {}
 
 template <Tag__ tg_>
@@ -106,10 +92,10 @@ inline typename TypeOf<tg_>::type const &SType::data() const
     return std::shared_ptr<Base>::get()->get<tg_>();
 }
 
-template <Tag__ tg_, typename ...Args>
-inline void SType::emplace(Args &&...args)
+template <Tag__ tg_, typename ...Params>
+inline void SType::emplace(Params &&...params)
 {
-    reset(new Semantic<tg_>(std::forward<Args>(args) ...));
+    reset(new Semantic<tg_>(std::forward<Params>(params) ...));
 }
 
 template <bool, typename Tp_>
